# booleantable

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/imgui-node-editor/: CMakeLists.txt
dependencies/sdl/: CMakeLists.txt
src/: CMakeLists.txt  Logging.cpp  TruthTable.cpp  TruthTable.h  Window.cpp  Window.h  main.cpp
src/nodes/: AndNode.cpp  AndNode.h  InputNode.cpp  InputNode.h
